compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_import_nested_spaced_with_alias_and_unqualified_member.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "import     testing/common/mod.{ type Type  }   as      module\nconst c = module.Variant1"
---
----- BEFORE RENAME
-- testing/common/mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import     testing/common/mod.{ type Type  }   as      module
                                                       ↑▔▔▔▔▔
const c = module.Variant1


----- AFTER RENAME
-- testing/common/mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import     testing/common/mod.{ type Type  }   as module_alias
const c = module_alias.Variant1
