compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_import_nested_spaced_with_unqualified_member.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "import         testing/commons/mod.{ type Type     }\nconst c = mod.Variant1"
---
----- BEFORE RENAME
-- testing/commons/mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import         testing/commons/mod.{ type Type     }
                               ↑▔▔                  
const c = mod.Variant1


----- AFTER RENAME
-- testing/commons/mod.gleam
pub fn fn1() { Nil }
pub const const1 = 5
pub const const2 = <<0:8>>
pub const const3 = "Hello"
pub type Type { Variant1 Variant2(Int) }
pub type GenericType(inner) { Node(inner, GenericType(inner)) Leaf }

-- app.gleam
import         testing/commons/mod.{ type Type     } as module
const c = module.Variant1
