compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_import_with_alias_to_orig.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: import mod as module
---
----- BEFORE RENAME
-- mod.gleam


-- app.gleam
import mod as module
              ↑▔▔▔▔▔


----- AFTER RENAME
-- mod.gleam


-- app.gleam
import mod
